--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                       ./images/Portfolio/cashless-payment-mob.jpg    1x,
                       ./images/Portfolio/cashless-payment-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
 
                   <img
@@ -565,7 +565,7 @@
                       ./images/Portfolio/meditation-app-mob.jpg    1x,
                       ./images/Portfolio/meditation-app-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
                   <img
                     class="portfolio-img"
@@ -610,7 +610,7 @@
                       ./images/Portfolio/taxi-service-mob.jpg    1x,
                       ./images/Portfolio/taxi-service-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
                   <img
                     class="portfolio-img"
@@ -655,7 +655,7 @@
                       ./images/Portfolio/screen-illustration-mob.jpg    1x,
                       ./images/Portfolio/screen-illustration-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
                   <img
                     class="portfolio-img"
@@ -700,7 +700,7 @@
                       ./images/Portfolio/online-courses-mob.jpg    1x,
                       ./images/Portfolio/online-courses-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
                   <img
                     class="portfolio-img"
