--- a/index.html
+++ b/index.html
@@ -472,11 +472,11 @@
                       ./images/Portfolio/banking-app-mob.jpg    1x,
                       ./images/Portfolio/banking-app-mob@2x.jpg 2x
                     "
-                    media="(min-width: 767px)"
+                    media="(max-width: 767px)"
                   />
 
                   <img
-                    class="portfolio-img"
+                    
                     src="./images/Portfolio/banking-app-mob.jpg"
                     alt="Banking App"
                     width="360"
