--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
               <img
                 class="team-img"
                 src="./images/mark_guerrero.jpg"
+                srcset="./images/mark_guerro@2x.jpg 2x"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -282,6 +283,7 @@
               <img
                 class="team-img"
                 src="./images/tom_ford.jpg"
+                srcset="./images/tom_ford@2x.jpg 2x"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -336,6 +338,7 @@
               <img
                 class="team-img"
                 src="./images/camila_garcia.jpg"
+                srcset="./images/camila_garcia@2x.jpg 2x"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -390,6 +393,7 @@
               <img
                 class="team-img"
                 src="./images/daniel_wilson.jpg"
+                srcset="./images/daniel_wilson@2x.jpg 2x"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
